client/target/debug/build/anyhow-c7ddf5d8bdbd1f7e/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /workspace/rust-webassembly-game/client/target/debug/build/anyhow-c7ddf5d8bdbd1f7e/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
